src/containers/Accounts/AccountHeader/styles.scss
@import '../../shared/css/variables';

.account-header {
  margin-bottom: 16px;

  .title {
    padding-bottom: 4px;
    color: $black-40;
    font-size: 14px;
    text-transform: uppercase;
    @include semibold;
  }

  .box-header {
    margin-top: 106px;
    margin-bottom: 80px;

    .title {
      display: flex;
      flex-direction: row;
      align-items: center;
    }

    h1 {
      overflow: hidden;
      text-overflow: ellipsis;
    }

    .badge {
      border: 1px solid $yellow-50;
      background: $yellow-50;
      box-shadow: 0px 1px 1px $yellow-80;
      color: $black;
    }

    .classic {
      margin: 0px;
      color: $white;
      font-size: 20px;
      @include bold;

      @include for-size(tablet-landscape-up) {
        font-size: 24px;
      }

      @include for-size(desktop-up) {
        font-size: 36px;
      }
    }

    .currency-pair {
      display: inline-block;
      padding: 5px;
      border-width: thin;
      border-style: solid;
      border-color: $black-70;
      margin: 0px;
      color: $white;
      font-size: 16px;
      @include semibold;

      @include for-size(tablet-landscape-up) {
        font-size: 10px;
      }

      @include for-size(desktop-up) {
        font-size: 20px;
      }
    }

    .amm {
      display: inline-block;
      padding-right: 10px;
      border-bottom: none;
      margin: 0px;
      color: $white;
      font-size: 18px;
      @include bold;

      @include for-size(tablet-landscape-up) {
        font-size: 10px;
      }

      @include for-size(desktop-up) {
        font-size: 23px;
      }
    }
  }

  .x-address {
    margin: 0;
    color: $white;
    font-size: 14px;
    @include bold;

    @include for-size(tablet-landscape-up) {
      font-size: 18px;
    }

    @include for-size(desktop-up) {
      font-size: 36px;
    }
  }

  .box-content {
    min-height: 100px;
    padding-bottom: 20px;
  }

  .info-container {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    margin-top: 68px;

    @include for-size(desktop-up) {
      flex-direction: row;
      margin-top: 80px;
    }

    .values {
      display: flex;
      flex-direction: row;
      justify-content: space-between;
      margin-bottom: 18px;
      color: $white;

      @include for-size(desktop-up) {
        flex-direction: column;
        margin-bottom: 0px;
      }

      .value {
        color: $white;
        font-size: 18px;
        line-height: 22.5px;
        text-decoration: none;
        @include bold;
      }
    }
  }

  .column {
    display: inline-block;
    width: 100%;
    vertical-align: top;

    @include for-size(desktop-up) {
      width: 50%;

      &.first {
        padding-right: calc(50% - clamp(47.5%, 500px, 50%));
      }

      &.second {
        padding-left: calc(50% - clamp(47.5%, 500px, 50%));
        text-align: right;
      }
    }

    .secondary {
      margin-bottom: 20px;
      font-size: 12px;
      @include bold;

      @include for-size(desktop-up) {
        border: none;
      }

      .label {
        color: $black-40;
        text-align: left;
        text-transform: uppercase;
        @include medium;
      }

      ul {
        width: 100%;
        padding: 0px;
        margin: 0px;
        list-style: none;

        li {
          padding: 1px;
          vertical-align: top;

          a {
            display: inline-block;
            overflow: hidden;
            text-overflow: ellipsis;
            text-transform: none;
            vertical-align: middle;
            white-space: nowrap;
            @include medium;
          }

          b {
            color: $white;
            word-break: break-all;
            @include bold;
          }

          &.flags {
            color: $blue-purple-30;
            font-style: italic;
          }
        }
      }

      &.x-address ul {
        width: 100%;

        li {
          display: flex;
          justify-content: space-between;

          @media (width >= 450px) {
            display: block;
          }

          .tag {
            font-weight: 500;
          }

          .network {
            font-weight: 500;
          }

          &.tag-info {
            padding-top: 14px;
            font-size: 14px;
          }
        }
      }

      &.balance {
        .value {
          overflow: hidden;
          margin: -4px 0px 5px -0.1em;
          color: $white;
          font-size: 26px;
          line-height: 30px;
          text-overflow: ellipsis;
          white-space: nowrap;
          @include regular;

          @include for-size(desktop-up) {
            font-size: 30px;
            line-height: 34px;
          }
        }

        .balance-selector-container {
          position: relative;
          margin-top: 10px;
        }
      }

      &.bridge,
      &.signer-list {
        display: block;
        font-weight: 500;

        h2 {
          text-align: left;
        }

        ul {
          li {
            display: flex;

            .label {
              padding-right: 15px;
              text-align: left;
              white-space: nowrap;
            }

            .value {
              overflow: hidden;
              margin-left: auto;
              font-weight: inherit;
              text-overflow: ellipsis;
            }

            .account {
              display: block;
              overflow: hidden;
              font-weight: inherit;
              text-overflow: ellipsis;
              white-space: nowrap;
            }

            .weight {
              overflow: inherit;
              text-align: right;
              text-overflow: inherit;
              white-space: nowrap;
            }
          }
        }
      }
    }
  }
}

